Give create menu well a height of 0 and resize it to fit the page rather than shorten it. Prevents the side scrollbar from flickering.

--- a/app/assets/stylesheets/create-menu.css.scss
+++ b/app/assets/stylesheets/create-menu.css.scss
@@ -32,6 +32,7 @@
     position: relative;
     margin: 0;
     min-height: 150px;
+    height: 0; // To be resized dynamically.
   }
 
   #spotify-tracks {
